<resources>
<!--    Common UI-->
    <string name="app_name">MAD</string>
    <string name="comp_name">FOODI</string>
    <string name ="sign_in">Sign In</string>
    <string name="sign_as_cus">Sign In As A Customer</string>
    <string name="sign_as_res">Sign In As A Restaurant</string>
    <string name="create_acc">Create An Account</string>
    <string name="reg">REGISTER</string>
    <string name="sign_up">Sign Up</string>
    <string name="reg_as_cus">Register As A Customer</string>
    <string name="reg_as_res">Register As A Restaurant</string>
    <string name ="cus_name">Customer Name</string>
    <string name ="cus_phone">Customer Phone</string>
    <string name ="cus_email">Customer Email</string>
    <string name ="enter_cus_uname">Customer Username</string>
    <string name ="enter_res_uname">Restaurent Username</string>
    <string name ="upload_profile_pic">Upload Profile Picture</string>
    <string name ="email">Email</string>
    <string name ="pass">Password</string>
    <string name ="view_dash">Dashboard</string>
    <string name ="enter_pass">Enter Password</string>
    <string name ="re_enter_pass">Re-Enter Password</string>
    <string name ="t_and_c">I accept all the terms and conditions</string>
    <string name ="res_name">Restaurant Name</string>
    <string name ="res_type">Restaurant Type</string>
    <string name ="res_loc">Restaurant Location</string>
    <string name ="res_phone">Restaurant Phone</string>
    <string name ="res_email">Restaurant Email</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="upload_logo">Upload Restaurant Logo</string>
    <string name ="upload_profile">Update Profile</string>
    <string name ="save">Save</string>

    <string name="greet">Hello!!! Nick</string>
    <string name="order">Order Your Favourites</string>
    <string name="search">Search</string>
    <string name="special_offers">Special Offers</string>
    <string name="special_item_name">Nasi-Goreng</string>
    <string name="special_item_price">Rs. 1100/=</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="pizza_hut">Pizza Hut</string>
    <string name="dominos">Dominos Pizza</string>
    <string name="american">American Restaurant</string>
    <string name="time">30mins-60mins</string>
    <string name="price">Rs. 900 Upwards</string>
    <string name="card_payment">Card Payment</string>
    <string name="card_no">Card Number</string>
    <string name="card_holder_name">Card Holder\'s Name</string>
    <string name="card_month">Month</string>
    <string name="card_Year">Year</string>
    <string name="card_cVv">CVV</string>
    <string name="card_checkout">Checkout</string>
    <string name="cus_dash">Customer Dashboard</string>
    <string name="update_profile">Update Profile</string>
    <string name="cur_orders">Current Orders</string>
    <string name="comp_orders">Completed Orders</string>
    <string name="total_orders">No Of Total Orders</string>
    <string name="total_payments">Total Spent Amount</string>
    <string name="amount_orders">25</string>
    <string name="amount_payments">Rs. 20320</string>
    <string name="update_cus">Update Customer Profile</string>
    <string name="cart">My Cart</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="pizza">Chicken Pizza</string>
    <string name="mac">Macaroni and Cheese</string>
    <string name="wings">Chicken Wings</string>
    <string name="pizza_price">Rs. 1200</string>
    <string name="mac_price">Rs. 700</string>
    <string name="wings_price">Rs. 900</string>
    <string name="order_price">Order Price : Rs. 2600</string>
    <string name="delivery_price">Order Price : Rs. 362</string>
    <string name="total_price">Total Price : Rs. 2962</string>
    <string name="desc">Description</string>
    <string name="example">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="weight">Weight : 1.2kg</string>
    <string name="calories">Calories : 120cal</string>
    <string name="deliver">Delivery : Rs. 321</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="add_cart">Add To Cart</string>
    <string name="choose_food">Choose the food you love</string>

    <string name="add_food">Add Items</string>
    <string name="view_food">View Items</string>
    <string name="name">Name</string>
    <string name="cat">Category</string>
    <string name="cal">Calories</string>
    <string name="des">Description</string>
    <string name="img">Image</string>
    <string name="add_food_btn">ADD FOOD ITEM</string>
    <string name="res_dash">Restaurant Dashboard</string>
    <string name="res_name_ex">Pizza Hut</string>
    <string name="text">New Orders Available</string>
    <string name="view_btn">View</string>
    <string name="text1">Large Suppreme Pizza - Rs 1200.00</string>
    <string name="text2">Double layered pizza with roast chicken, beef, pineapple, cheese, onion and olive</string>
    <string name="text4">BBQ Chicken Pizza - Rs 900.00</string>
    <string name="text5">BBQ chicken accompanied by spicy jalapenos, onions and cheese</string>
    <string name="add_item">ADD ITEMS</string>
    <string name="res_order">NEW ORDERS</string>
    <string name="txt1">Large Suppreme Pizza</string>
    <string name="txt2">Large</string>
    <string name="txt3">1</string>
    <string name="txt4">Order ID-0012456839</string>
    <string name="txt5">Rs 1200.00</string>
    <string name="button1">Approve</string>
    <string name="button2">Delete</string>
    <string name="txt6">Chicken Wings</string>
    <string name="txt7">Medium</string>
    <string name="txt8">1</string>
    <string name="txt10">Order ID-0023445789</string>
    <string name="txt11">Rs 900.00</string>
    <string name="button3">Set Status</string>
    <string name="button4">Delete</string>
    <string name="txt13">Order ID-0023667789</string>
    <string name="edit_food">EDIT FOOD ITEM</string>
    <string name="add_book">Address Book</string>
    <string name="address">Type Your Address</string>
    <string name="button_x">Label</string>
    <string name="textView37">Near by You</string>


    <string name="Thick_Cut_Fries">Thick Cut Fries</string>
    <string name="Feedbacks">Feedbacks</string>
    <string name="Pepperoni_Pizza">Pepperoni Pizza</string>
    <string name="Zinger_Burger_with_cheese">Zinger Burger with cheese</string>
    <string name="Date">Date :</string>
    <string name="Order_ID">Order ID :</string>
    <string name="Time">Time :</string>
    <string name="Total_Prize">Total Prize :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Items">Items :</string>
    <string name="Write_your_Review_hear">Write your Review hear</string>
    <string name="Track_My_Delivery">Track My Delivery  -></string>
    <string name="Save">Save</string>
    <string name="Delivered">Delivered</string>
    <string name="txt_View">Update Restaurant Details</string>
    <string name="btnsave">SAVE</string>
    <string name="Edit_your_feedback_hear">Edit your feedback hear</string>

</resources>