<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_food"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:drawableRight="@drawable/ic_baseline_menu_24"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_food"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7AFFFFFF"
        android:hint="@string/name"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7AFFFFFF"
        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
        android:drawablePadding="25dp"
        android:hint="@string/cat"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cat"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7AFFFFFF"
        android:hint="@string/cal"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#7AFFFFFF"
        android:hint="@string/price"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7AFFFFFF"
        android:hint="@string/weight"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/weight"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7AFFFFFF"
        android:hint="@string/des"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/des"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7AFFFFFF"
        android:hint="@string/img"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:drawableRight="@drawable/ic_baseline_add_box_24"
        android:drawablePadding="25dp"/>

    <Button
        android:id="@+id/add_food_btn"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF7700"
        android:text="@string/add_food_btn"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />



</RelativeLayout>