<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray">


    <TextView
        android:id="@+id/txt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="588dp"
        android:text="@string/txt3"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/res_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:drawableRight="@drawable/ic_baseline_menu_24"
        android:drawableTint="@color/black"
        android:gravity="center"
        android:text="@string/res_order"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="136dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="249dp"
        android:layout_marginBottom="509dp"
        app:srcCompat="@drawable/sup" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="149dp"
        android:layout_height="136dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="212dp"
        app:srcCompat="@drawable/sup" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="615dp"
        android:text="@string/txt1"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="321dp"
        android:text="@string/txt1"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="454dp"
        android:text="@string/txt6"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="587dp"
        android:text="@string/txt2"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="293dp"
        android:text="@string/txt2"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="429dp"
        android:text="@string/txt7"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="428dp"
        android:text="@string/txt8"
        android:textColor="#504F4F"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="290dp"
        android:text="@string/txt3"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="557dp"
        android:text="@string/txt4"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="263dp"
        android:text="@string/txt13"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="402dp"
        android:text="@string/txt10"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="527dp"
        android:text="@string/txt5"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="230dp"
        android:text="@string/txt5"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="375dp"
        android:text="@string/txt11"
        android:textColor="#504F4F"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="603dp"
        android:backgroundTint="#FF7700"
        android:text="@string/button1"
        android:textColor="@color/white"
        android:textSize="7.5dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="441dp"
        android:backgroundTint="#FF5722"
        android:text="@string/button3"
        android:textColor="@color/white"
        android:textSize="7.5dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="309dp"
        android:backgroundTint="#FF5722"
        android:text="@string/button3"
        android:textColor="@color/white"
        android:textSize="7.5dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="565dp"
        android:backgroundTint="#706F6E"
        android:text="@string/button2"
        android:textColor="@color/white"
        android:textSize="7.5dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="402dp"
        android:backgroundTint="#706F6E"
        android:text="@string/button4"
        android:textColor="@color/white"
        android:textSize="7.5dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="269dp"
        android:backgroundTint="#706F6E"
        android:text="@string/button4"
        android:textColor="@color/white"
        android:textSize="7.5dp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="142dp"
        android:layout_height="129dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="359dp"
        app:srcCompat="@drawable/wings" />


</RelativeLayout>