<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglight"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="240dp"
            android:drawableLeft="@drawable/ic_baseline_remove_24"
            android:drawableRight="@drawable/ic_baseline_add_24"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/two"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="54dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_baseline_arrow_black_24"
            android:drawablePadding="60dp"
            android:gravity="center"
            android:text="@string/pizza"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="229dp"
            android:layout_height="182dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/pizza2" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="262dp"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="10dp"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView35"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="9dp"
            android:text="@string/calories"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView36"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="19dp"
            android:text="@string/deliver"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:text="@string/example"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <Button
            android:id="@+id/button8"
            android:layout_width="50dp"
            android:layout_height="43dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="22dp"
            android:text="@string/small"
            android:textColor="@color/black"
            android:textSize="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName12"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button9"
            android:layout_width="50dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="22dp"
            android:text="@string/medium"
            android:backgroundTint="@color/btn_orange"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName12"
            app:layout_constraintStart_toEndOf="@+id/button8" />

        <Button
            android:id="@+id/button10"
            android:layout_width="50dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="22dp"
            android:text="@string/large"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName12"
            app:layout_constraintStart_toEndOf="@+id/button9" />

        <Button
            android:id="@+id/button11"
            android:layout_width="143dp"
            android:layout_height="45dp"
            android:layout_marginStart="78dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="56dp"
            android:text="@string/add_cart"
            android:backgroundTint="@color/btn_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>